# drf-haystack

./: .gitignore  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml  test.yml  tox.yml
docs/: 01_intro.rst  02_autocomplete.rst  03_geospatial.rst  04_highlighting.rst  05_more_like_this.rst  06_term_boost.rst  07_faceting.rst  08_permissions.rst  09_multiple_indexes.rst  10_tips_n_tricks.rst  Makefile  advanced_usage.rst  basic_usage.rst  conf.py  index.rst  make.bat  rtd_requirements.txt
docs/apidoc/: drf_haystack.rst  modules.rst
drf_haystack/: __init__.py  constants.py  fields.py  filters.py  generics.py  mixins.py  query.py  search_indexes.py  serializers.py  utils.py  viewsets.py
tests/: __init__.py  apps.py  constants.py  generate_test_data.py  mixins.py  run_tests.py  runtests.py  settings.py  test_filters.py  test_serializers.py  test_utils.py  test_viewsets.py  urls.py
tests/mockapp/: __init__.py  apps.py  models.py  search_indexes.py  serializers.py  views.py
tests/mockapp/fixtures/: mockallfield.json  mocklocation.json  mockperson.json  mockpet.json
tests/mockapp/migrations/: 0001_initial.py  0002_auto_20150212_2020.py  0002_mockperson.py  0003_load_fixtures.py  0003_mockpet.py  0004_load_fixtures.py  0005_mockperson_birthdate.py  0006_mockallfield.py  mock_locations.json
tests/mockapp/templates/search/indexes/mockapp/: mocklocation_text.txt  mockperson_text.txt
